[cr] fix logos not wrapping on mobile

--- a/css/about.scss
+++ b/css/about.scss
@@ -1,3 +1,5 @@
+@import 'mixins.scss';
+
 .about {
     h4 {
         text-transform: none;
@@ -12,9 +14,12 @@
     flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
+
+    @include mobile_tablet {
+        justify-content: center;
+    }
 }
 .logo {
     width: 50px;
     margin: 10px;
-    flex: 1;
 }
